test contrast issue

--- a/src/app/ui-components/item-card/item-card.component.scss
+++ b/src/app/ui-components/item-card/item-card.component.scss
@@ -29,7 +29,7 @@
         }
     }
   h3 {
-    color: black;
+    color: white;
   }
 
 }
